--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -26,7 +26,7 @@
     <link href="~/global-styles.css" rel="stylesheet">
 
 
-    <script src="~/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+    @*<script src="~/libs/bootstrap/js/bootstrap.bundle.min.js"></script>*@
 
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="_content/Blazored.TextEditor/quill-blot-formatter.min.js"></script>
