--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -488,19 +488,22 @@
         <div class="row">
             <div class="col-2"><label>@L["AddModule"]</label></div>
             <div class="col-10">
-                <Dropdown>
-                    <DropdownToggle Color="Color.Primary">
-                        @L["SelectModule"]
-                    </DropdownToggle>
-                    <DropdownMenu>
-                        @foreach (GroupBuyModuleType groupBuyDropdownValue in Enum.GetValues(typeof(GroupBuyModuleType)))
-                        {
-                            <DropdownItem Clicked='@(()=>AddProductItem(@groupBuyDropdownValue))'>
-                                @L[groupBuyDropdownValue.ToString()]
-                            </DropdownItem>
-                        }
-                    </DropdownMenu>
+                 @if (CollapseItem.Count < 20)
+                {
+                    <Dropdown>
+                        <DropdownToggle Color="Color.Primary">
+                            @L["SelectModule"]
+                        </DropdownToggle>
+                        <DropdownMenu>
+                            @foreach (GroupBuyModuleType groupBuyDropdownValue in Enum.GetValues(typeof(GroupBuyModuleType)))
+                            {
+                                <DropdownItem Clicked='@(()=>AddProductItem(@groupBuyDropdownValue))'>
+                                    @L[groupBuyDropdownValue.ToString()]
+                                </DropdownItem>
+                            }
+                        </DropdownMenu>
                 </Dropdown>
+                }
             </div>
         </div>
         @foreach (var module in CollapseItem)
