--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/SetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/SetItem.razor
@@ -36,7 +36,8 @@
                   TotalItems="Total"
                   ShowPager="true"
                   PageSize="PageSize"
-                  RowDoubleClicked="OnEditItem">
+                  RowDoubleClicked="OnEditItem"
+                  SortChanged="OnSortChange">
             <DataGridColumns>
                 <DataGridColumn TItem="SetItemDto" Caption="@L["Select"]">
                     <DisplayTemplate>
