--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
@@ -40,7 +40,8 @@
                   TotalItems="Total"
                   ShowPager="true"
                   PageSize="PageSize"
-                  RowDoubleClicked="OnEditItem">
+                  RowDoubleClicked="OnEditItem"
+                  SortChanged="OnSortChange">
             <DataGridColumns>
                 <DataGridColumn TItem="ItemDto" Caption="@L["Select"]">
                     <DisplayTemplate>
@@ -56,7 +57,8 @@
                                 Caption="@L["ItemDescription"]">
                 </DataGridColumn>
                 <DataGridColumn TItem="ItemDto"
-                                Caption="@L["TimeLimitPeriod"]">
+                                Caption="@L["TimeLimitPeriod"]"
+                                Sortable="false">
                                 <DisplayTemplate>
                                     @context.LimitAvaliableTimeStart.ToShortDateString() - @context.LimitAvaliableTimeEnd.ToShortDateString()
                                 </DisplayTemplate>
