order list page draft and style changes

--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/CreateFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/CreateFreebie.razor
@@ -289,18 +289,17 @@
         </div>
     </CardBody>
     <CardFooter>
-        <div class="row">
-            <div class="col-11 text-lg-end">
-                <Button Type="@ButtonType.Button" class="btn btn-danger me-1" Clicked="CancelToFreebieList">@L["Cancel"]</Button>
-                <Button Type="@ButtonType.Button" Clicked="CreateFreebieAsync" class="btn btn-primary me-1">
-                    <i class="fa fa-check"></i>
-                    @L["Save"]
-                </Button>
-            </div>
-        </div>
     </CardFooter>
 </Card>
-
+<div class="row">
+    <div class="col-12 text-lg-end">
+        <Button Type="@ButtonType.Button" class="btn btn-danger" Clicked="CancelToFreebieList">@L["Cancel"]</Button>
+        <Button Type="@ButtonType.Button" class="btn btn-primary" Clicked="CreateFreebieAsync">
+            <i class="fa fa-check"></i>
+            @L["Save"]
+        </Button>
+    </div>
+</div>
 @code {
 
  }
