--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/Items.razor
@@ -13,26 +13,26 @@
 @inject IStringLocalizer<PikachuResource> L
 @inject NavigationManager NavigationManager
 
-<div class="col-12 row">
+<div class="row">
     <div class="col-6">
         <h3>@L["Items"]</h3>
     </div>
-    <div class="col-6 d-flex flex-row-reverse">
-        <Button Danger Type="@ButtonType.Button" Class="btn btn-sm btn-danger" Clicked="DeleteSelectedAsync">
-                @L["DeleteSelected"]
-        </Button>
-        <Button Type="@ButtonType.Button" Class="btn btn-sm btn-secondary me-1">@L["CopyItem"]</Button>
-        <Button Type="@ButtonType.Button" Class="btn btn-sm btn-primary me-1" Clicked="CreateNewItem">
-            <i class="fa fa-plus"></i>    
-            @L["NewItem"]
-        </Button>
-        <div class="me-2 p-2">
-            <input type="checkbox" class="me-1" style="height: 15px; width: 15px;" checked="@IsAllSelected" @onchange="HandleSelectAllChange"></input>
+    <div class="col-6 text-lg-end">
+        <div class="custom-check-group me-1">
+            <input type="checkbox" class="form-check-input" checked="@IsAllSelected" @onchange="HandleSelectAllChange"></input>
             <Label Class="form-label">@L["SelectAll"]</Label>
         </div>
+        <Button Type="@ButtonType.Button" Class="btn btn-sm btn-primary" Clicked="CreateNewItem">
+            <i class="fa fa-plus"></i>
+            @L["NewItem"]
+        </Button>
+        <Button Type="@ButtonType.Button" Class="btn btn-sm btn-secondary">@L["CopyItem"]</Button>
+        <Button Type="@ButtonType.Button" Class="btn btn-sm btn-danger" Clicked="DeleteSelectedAsync">
+            @L["DeleteSelected"]
+        </Button>
     </div>
 </div>
-<Card Class="mt-2">
+<Card>
     <CardBody>
         <DataGrid TItem="ItemDto"
                   Data="ItemList"
@@ -43,7 +43,7 @@
                   RowDoubleClicked="OnEditItem"
                   SortChanged="OnSortChange">
             <DataGridColumns>
-                <DataGridColumn TItem="ItemDto" Caption="@L["Select"]">
+                <DataGridColumn TItem="ItemDto" Caption="@L["Select"]" Width="30px">
                     <DisplayTemplate>
                         <InputCheckbox class="form-check-input" @bind-Value="@context.IsSelected"></InputCheckbox>
                     </DisplayTemplate>
