--- a/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/SetItem/CreateSetItem.razor
@@ -282,22 +282,17 @@
                 </div>
             </div>
         </div>
-
-    </CardBody>
-
-    <CardFooter>
-        <div class="row">
-            <div class="col-12 text-lg-end">
-                <Button Type="@ButtonType.Button" class="btn btn-danger me-1" Clicked="CancelToSetItem">@L["Cancel"]</Button>
-                <Button Type="@ButtonType.Button" class="btn btn-primary me-1" Clicked="CreateSetItemAsync">
-                    <i class="fa fa-check"></i>
-                    @L["Save"]
-                </Button>
-            </div>
-        </div>
-    </CardFooter> 
+    </CardBody> 
 </Card>
-
+<div class="row">
+    <div class="col-12 text-lg-end">
+        <Button Type="@ButtonType.Button" class="btn btn-danger" Clicked="CancelToSetItem">@L["Cancel"]</Button>
+        <Button Type="@ButtonType.Button" class="btn btn-primary" Clicked="CreateSetItemAsync">
+            <i class="fa fa-check"></i>
+            @L["Save"]
+        </Button>
+    </div>
+</div>
 
 @code {
 
